Added ability to list jobs by collection id; included collection id into a list of job items.
