# core/jobs.go
@@ -6,8 +6,13 @@ import (
 	"github.com/akornatskyy/scheduler/domain"
 )
 
-func (s *Service) ListJobs() ([]*domain.JobItem, error) {
-	return s.Repository.ListJobs("")
+func (s *Service) ListJobs(collectionId string) ([]*domain.JobItem, error) {
+	if collectionId != "" {
+		if err := domain.ValidateID(collectionId); err != nil {
+			return nil, err
+		}
+	}
+	return s.Repository.ListJobs(collectionId)
 }
 
 func (s *Service) CreateJob(job *domain.JobDefinition) error {
